<resources>
    <string name="app_name">FinalProjectAndroid</string>
    <string name="register_now">Register Now</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login now</string>
    <string name="email">Enter your E-mail</string>
    <string name="username">Enter user name</string>
    <string name="password">Enter password</string>
    <string name="conf_password">Confirm password</string>
    <string name="goToProfile">Go To Profile</string>
    <string name="regRef">Don\'t have account?</string>
    <string name="profilePic">Profile pic</string>
    <string name="add">Add button</string>
    <string name="registration">Register Here</string>
    <string name="logRef">Already have account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture">picture</string>
    <string name="edit_profile">Edit Profile</string>
</resources>