<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/profilePicReg"
        android:layout_width="119dp"
        android:layout_height="112dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/profilePic"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addProfilePic"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/add"
        app:layout_constraintRight_toRightOf="@id/profilePicReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilePicReg"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/regTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="#CC000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/profilePicReg"
        app:layout_constraintTop_toTopOf="@+id/addProfilePic" />

    <EditText
        android:id="@+id/email"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="@+id/profilePicReg"
        app:layout_constraintStart_toStartOf="@+id/regTxt"
        app:layout_constraintTop_toBottomOf="@+id/regTxt" />

    <EditText
        android:id="@+id/username"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:hint="@string/conf_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:autofillHints="password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_now"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <TextView
        android:id="@+id/haveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logRef"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <TextView
        android:id="@+id/login_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/haveAcc"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />


</androidx.constraintlayout.widget.ConstraintLayout>